# common_framework

./: Makefile.am
conf/default/: event_socket.yml  logconf.yml  modules.yml
conf/default/mq_profiles/: mq_consumer_config.yml  mq_consumer_default.yml  mq_producer_default.yml
db/: agc_test.db
doc/: interface of sig and media.txt
libs/: apr-util.7z  apr.7z
src/: agc_core.c  agc_driver.c  agc_dso.c  agc_event.c  agc_sctp.c  agc_tun.c
src/include/: agc_driver.h  agc_event.h  agc_tun.h  agc_types.h
src/mod/caches/mod_redis/: Makefile.am
src/mod/dbs/mod_sqlite/: Makefile.am  mod_sqlite.c
src/mod/drivers/mod_epoll/: mod_epoll.c
src/mod/gateways/mod_media/: Makefile.am  agc_gtp_path.c  agc_gtp_path.h  agc_list.h  media_context.c  media_context.h  media_db.c  media_db.h  media_gtp_path.c  media_gtp_path.h  media_sig_path.c  media_sig_path.h  media_tun_path.c  media_tun_path.h  mod_media.c  mod_media.h
src/mod/gateways/mod_sig/: ApmManager.cc  ApmManager.h  AsmContext.h  AsmManager.cc  AsmManager.h  BaseLayerT.h  CfgHelper.cc  CfgHelper.h  CfgStruct.h  DbManager.cc  DbManager.h  EpmManager.cc  EpmManager.h  EsmContext.h  EsmManager.cc  EsmManager.h  IStackManager.h  Makefile.am  MgwContext.h  NgapAsn1c.h  NgapMessage.h  NgapProtocol.cc  NgapProtocol.h  NgapSessManager.cc  NgapSessManager.h  NgapSession.h  NsmManager.cc  NsmManager.h  PduSessManager.cc  PduSessManager.h  PlmnUtil.cc  PlmnUtil.h  RanNodeId.cc  RanNodeId.h  SctpLayer.cc  SctpLayer.h  SigAlarm.cc  SigAlarm.h  SigApi.cc  SigApi.h  (+7 more)
src/mod/mqs/mod_rabbitmq/: Makefile.am
src/mod/secgw/mod_ipsec/: Makefile.am  mod_ipsec.c  mod_ipsec.h  secgw_config_api.c  secgw_config_api.h  secgw_db_api.c  secgw_db_api.h  vici_api.c  vici_api.h
src/mod/sysinfos/mod_sysinfo/: CfgNetwork.h  Makefile.am  SysAlarm.cc  SysAlarm.h  SysInfo.cc  SysInfo.h  SysInfoDB.cc  SysInfoDB.h  cfgNetwork.cc  mod_sysinfo.cc  mod_sysinfo.h
test/: README.md  cmd_parser.c  event_test.c
(+1 files in other folders)
